[tool.poetry]
name = "hack-ebpf"
version = "0.1.0"
description = ""
authors = ["Dima Tisnek <dimaqq@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bpf-asm = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
